# stellar-explorer-dapp

./: Cargo.toml  README.md
contracts/hello_world/: Cargo.toml
contracts/voting/: Cargo.toml
contracts/voting/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/docs/: tests-passing.txt
frontend/src/: App.test.tsx  App.tsx  index.css
